--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="nav-logo">
+            <div class="nav-logo border">
                 <div class="logo"></div>
+            </div>
+            <div class="nav-address border">
+                <p class="address1">Delivere to</p>
+                <div class="add-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="address2">India</p>
+                </div>
             </div>
         </div>
     </header>
