--- a/index.html
+++ b/index.html
@@ -65,5 +65,31 @@
             <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in </a> </p>
         </div>
     </div>
+    <div class="shop-content">
+        <div class="box1 box">
+            <div class="box-content">
+                <h2>Gifts for every Mom</h2>
+                <div class="box-img" style="background-image: url('box-img1.jpg');"></div>
+                <p>Shop Gifts</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+                <h2>Amazon Gadget Store</h2>
+                <div class="box-img" style="background-image: url('box-img3.jpg');"></div>
+                <p>See more from Amazon GadgetsSe</p>
+            </div>
+        <div class="box3 box">
+            <div class="box-content">
+                <h2>Deals in PCs</h2>
+                <div class="box-img" style="background-image: url('box-img2.jpg');"></div>
+                <p>Shop Now</p>
+            </div>
+        <div class="box4 box">
+            <div class="box-content">
+                <h2>Tops Deals</h2>
+                <div class="box-img" style="background-image: url('box-img4.jpg');"></div>
+                <p>See all deals</p></div>
+    </div>
 </body>
 </html>
