error fix in box-content

--- a/index.html
+++ b/index.html
@@ -70,26 +70,30 @@
             <div class="box-content">
                 <h2>Gifts for every Mom</h2>
                 <div class="box-img" style="background-image: url('box-img1.jpg');"></div>
-                <p>Shop Gifts</p>
+                <a href="#">Shop Gifts</a>
             </div>
         </div>
         <div class="box2 box">
             <div class="box-content">
-                <h2>Amazon Gadget Store</h2>
-                <div class="box-img" style="background-image: url('box-img3.jpg');"></div>
-                <p>See more from Amazon GadgetsSe</p>
+            <h2>Deals in PCs</h2>
+            <div class="box-img" style="background-image: url('box-img2.jpg');"></div>
+            <a href="#">Shop Now</a>
+            </div>
             </div>
         <div class="box3 box">
             <div class="box-content">
-                <h2>Deals in PCs</h2>
-                <div class="box-img" style="background-image: url('box-img2.jpg');"></div>
-                <p>Shop Now</p>
+            <h2>Amazon Gadget Store</h2>
+            <div class="box-img" style="background-image: url('box-img3.jpg');"></div>
+            <a href="#">See more from Amazon Gadgets</a>
             </div>
+        </div>
         <div class="box4 box">
             <div class="box-content">
-                <h2>Tops Deals</h2>
-                <div class="box-img" style="background-image: url('box-img4.jpg');"></div>
-                <p>See all deals</p></div>
+            <h2>Amazon Gadget Store</h2>
+            <div class="box-img" style="background-image: url('box-img4.jpg');"></div>
+            <a href="#">See all deals</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
