--- a/index.html
+++ b/index.html
@@ -94,6 +94,187 @@
             <a href="#">See all deals</a>
             </div>
         </div>
+        <div class="box4 box">
+            <div class="box-content">
+            <h2>Upgrade your office furniture</h2>
+            <div class="box-img" style="background-image: url('box-img5.jpg');"></div>
+            <a href="#">Buy Now</a>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+            <h2>Creating business solutions</h2>
+            <div class="box-img" style="background-image: url('box-img6.jpg');"></div>
+            <a href="#">See more software products</a>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+            <h2>Shop activity trackers and smartwatches</h2>
+            <div class="box-img" style="background-image: url('box-img7.jpg');"></div>
+            <a href="#">See all deals</a>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+            <h2>Player's paradise starts here</h2>
+            <div class="box-img" style="background-image: url('box-img8.jpg');"></div>
+            <a href="#">Shop Videos Games</a>
+            </div>
+        </div>
     </div>
+    </div>
+
+    <footer>
+        <div class="foot-panel">
+            Back to Top
+        </div>
+        <div class="foot-panel2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a>Blog</a>
+                <a>About Amazon</a>
+                <a>Investor Relations</a>
+                <a>Amazon Devices</a>
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Make Money with Us</p>
+                <a>Sell products on Amazon</a>
+                <a>Sell on Amazon Business</a>
+                <a>Sell apps on Amazon</a>
+                <a>Become an Affiliate</a>
+                <a>Advertise Your Products</a>
+                <a>Self-Publish with Us</a>
+                <a>Host an Amazon Hub</a>
+                <a>> See More Make Money with Us</a>
+            </ul>
+            <ul>
+                <p>Amazon Payment Products</p>
+                <a>Amazon Business Card</a>
+                <a>Shop with Points</a>
+                <a>Reload Your Balance</a>
+                <a>Amazon Currency Converter</a>
+            </ul>
+            <ul>
+                <p>Let Us Help You</p>
+                <a>Amazon and COVID-19</a>
+                <a>Your Account</a>
+                <a>Your Order</a>
+                <a>Shipping Rates & Policies</a>
+                <a>Returns & Replacements</a>
+                <a>Manage Your Content and Devices</a>
+                <a>Amazon Assistant</a>
+                <a>Help</a>
+            </ul>
+        </div>
+        <div class="foot-panel3">
+            <div class="logo-foot"></div>
+            <div class="button-foot">
+                <button>
+                    <i class="fa-solid fa-globe"></i> English</button>
+                <button>
+                    $ USD-U.S Dollar</button>
+                <button>
+                    <i class="fa-solid fa-flag-usa"></i> United State</button>
+            </div>
+        </div>
+        <div class="foot-panel4">
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+            <ul>
+                <p>Amazon Music</p>
+                <a>Stream million</a>
+                <a>of songs</a>
+            </ul>
+        </div>
+        <div class="foot-panel5">
+            <div class="pages">
+                <a href="#">Conditions of Use</a>
+                <a href="#"> Privacy Notice</a>
+                <a href="#">Consumer Health Data Privacy Disclosure</a>
+                <a href="#">Your Ads Privacy Choices</a>
+            </div>
+            <div class="copyright">© 1996-2024, Amazon.com, Inc. or its affiliates</div>
+        </div>
+    </footer>
 </body>
 </html>
